--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,20 @@
         <scala.version>2.12.7</scala.version>
         <flink.version>1.8.2</flink.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     
     <dependencies>
         <dependency>
@@ -34,6 +48,13 @@
             <artifactId>flink-ml_2.12</artifactId>
             <version>${flink.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- reference: https://math.nist.gov/javanumerics/jama/doc/ -->
+        <dependency> 
+            <groupId>gov.nist.math</groupId>
+            <artifactId>jama</artifactId>
+            <version>1.0.3</version>
         </dependency>
     </dependencies>
 
