--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,22 @@
             <artifactId>jama</artifactId>
             <version>1.0.3</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
