--- a/pom.xml
+++ b/pom.xml
@@ -89,12 +89,24 @@
             <version>1.0.1</version>
         </dependency>
 
+        <!-- reference: https://github.com/optimatika/ojAlgo -->
         <dependency>
             <groupId>org.ojalgo</groupId>
             <artifactId>ojalgo</artifactId>
             <version>48.1.0</version>
         </dependency>
+
+        <!-- reference: http://openjdk.java.net/projects/code-tools/jmh/ -->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.23</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.23</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
-
 </project>
